--- a/lib/enet/CMakeLists.txt
+++ b/lib/enet/CMakeLists.txt
@@ -10,8 +10,12 @@ check_function_exists("fcntl" HAS_FCNTL)
 check_function_exists("poll" HAS_POLL)
 check_function_exists("getaddrinfo" HAS_GETADDRINFO)
 check_function_exists("getnameinfo" HAS_GETNAMEINFO)
-check_function_exists("gethostbyname_r" HAS_GETHOSTBYNAME_R)
-check_function_exists("gethostbyaddr_r" HAS_GETHOSTBYADDR_R)
+# Switch doesn't support these and cmake freaks out checking them
+# because they exist in headers but not libs
+if (NOT USE_SWITCH)
+  check_function_exists("gethostbyname_r" HAS_GETHOSTBYNAME_R)
+  check_function_exists("gethostbyaddr_r" HAS_GETHOSTBYADDR_R)
+endif()
 check_function_exists("inet_pton" HAS_INET_PTON)
 check_function_exists("inet_ntop" HAS_INET_NTOP)
 check_struct_has_member("struct msghdr" "msg_flags" "sys/types.h;sys/socket.h" HAS_MSGHDR_FLAGS)
