Update desktop and AppData files

--- a/data/supertuxkart.desktop
+++ b/data/supertuxkart.desktop
@@ -2,12 +2,13 @@
 Name=SuperTuxKart
 Icon=supertuxkart
 #I18N: Generic name in desktop file entry, summary in AppData and short description in Google Play
+GenericName[ar]=لعبة سباق سيارات ثلاثية الأبعاد مفتوحة المصدر
 GenericName[be]=3D-гульня для гонак на картах з адкрытым зыходным кодам
 GenericName[bg]=3-измерна състезателна игра с колички, с отворен код
 GenericName[ca]=Un joc de curses de karts en 3D de codi obert.
 GenericName[cs]=3D open source závodní hra motokár
 GenericName[da]=Et 3D-kartracerspil i open source
-GenericName[de]=Ein quelloffenes 3D-Kart-Rennspiel
+GenericName[de]=Ein Open-Source 3D-Kart-Rennspiel
 GenericName[el]=Ενα 3D ανοιχτού κώδικα παιχνίδι  αγώνων με κάρτ 
 GenericName[es]=Un juego de carreras de karts en 3D de código abierto.
 GenericName[eu]=Kart lasterketetako 3D jolas librea
@@ -20,11 +21,12 @@ GenericName[id]=Sebuah permainan balap kart 3D sumber-terbuka
 GenericName[it]=Un gioco open-source 3D di corse su kart
 GenericName[ja]=オープンソースな3Dレーシングカートゲームです
 GenericName[ko]=3D 오픈소스 카트 경주 게임
+GenericName[ml]=ഒരു സ്വതന്ത്ര 3D കാർട്ട് റേസിംഗ് ഗെയിം
 GenericName[nl]=Een open source 3D kartracespel
 GenericName[nn]=Eit racerspel i 3D med open kjeldekode
 GenericName[pl]=Trójwymiarowe wyścigi gokartów open-source
-GenericName[pt_BR]=Um jogo de corrida de kart 3D de código aberto
 GenericName[pt]=Um jogo 3D de karting com mascotes de aplicativos open source.
+GenericName[pt_BR]=Um jogo de corrida de kart 3D de código aberto
 GenericName[ru]=Свободная трёхмерная гоночная игра на картах
 GenericName[sr]=Игра тркања колицима слободног кода
 GenericName[sv]=Ett 3D-racingspel med öppen källkod
@@ -39,6 +41,7 @@ StartupNotify=false
 Type=Application
 Categories=Game;ArcadeGame;
 #I18N: Keywords in desktop entry, translators please keep it separated with semicolons
+Keywords[ar]=بطريق؛لعبة؛سباق؛
 Keywords[be]=tux;game;race;тукс;такс;гульня;гонка;футбол;
 Keywords[bg]=тъкс;кола;коли;количка;колички;състезание;състезания
 Keywords[ca]=tux;joc;cursa;
@@ -54,11 +57,12 @@ Keywords[hu]=tux;játék;verseny;
 Keywords[id]=tux;permainan;balapan;
 Keywords[it]=tux;gioco;gara;
 Keywords[ko]=턱스;게임;경주
+Keywords[ml]=ടക്സ്;ഗെയിം;റേസ്;
 Keywords[nl]=tux;game;race;spel;kart;super;auto;parcours;
 Keywords[nn]=tux;spel;billøp;racerspel;
 Keywords[pl]=tux;gra;wyścigi;
-Keywords[pt_BR]=tux;jogo;corrida;
 Keywords[pt]=tux;jogo;corrida
+Keywords[pt_BR]=tux;jogo;corrida;
 Keywords[ro]=tux;joc;cursa
 Keywords[ru]=такс;игра;гонка;
 Keywords[sr]=такс;игра;трка;тукс;игрица;
