Compile both Irrlicht drivers
Also includes some bugfixes to previously hardcoded logic in CIrrDeviceSDL to allow STK to run when both drivers are compiled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,15 +63,15 @@ if (IOS)
     ADD_DEFINITIONS(-DMOBILE_STK)
     ADD_DEFINITIONS(-DIOS_STK)
     set(CMAKE_XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2")
-    option(USE_GLES2 "Use OpenGL ES2 renderer" ON)
+    option(USE_GLES2 "Use OpenGL ES renderer" ON)
 endif()
 
 if((UNIX AND NOT APPLE) AND NOT SERVER_ONLY)
     if((${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm") OR 
        (${CMAKE_SYSTEM_PROCESSOR} MATCHES "aarch64"))
-        option(USE_GLES2 "Use OpenGL ES2 renderer" ON)
+        option(USE_GLES2 "Use OpenGL ES renderer" ON)
     else()
-        option(USE_GLES2 "Use OpenGL ES2 renderer" OFF)
+        option(USE_GLES2 "Use OpenGL ES renderer" OFF)
     endif()
 
 endif()
@@ -155,15 +155,15 @@ endif()
 
 if(USE_GLES2)
     add_definitions(-DUSE_GLES2)
-    if (NOT IOS)
-        add_definitions(-D_IRR_COMPILE_WITH_OGLES2_)
-    endif()
-    add_definitions(-DNO_IRR_COMPILE_WITH_OPENGL_)
+endif()
+
+if (NOT IOS)
+    add_definitions(-D_IRR_COMPILE_WITH_OGLES2_)
 endif()
 
 if(SERVER_ONLY)
     add_definitions(-DSERVER_ONLY)
-    add_definitions(-DNO_IRR_COMPILE_WITH_X11_ -DNO_IRR_COMPILE_WITH_OPENGL_)
+    add_definitions(-DNO_IRR_COMPILE_WITH_X11_ -DNO_IRR_COMPILE_WITH_OPENGL_ -DNO_IRR_COMPILE_WITH_OGLES2_)
 endif()
 
 if(UNIX OR MINGW)
