CMakeLists: add mbedtls include dirs on switch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -588,7 +588,7 @@ else()
             message(FATAL_ERROR "OpenSSL version found (${OPENSSL_VERSION}) is less then the minimum required (${OPENSSL_MINIMUM_VERSION}), aborting.")
         endif()
         include_directories(${OpenSSL_INCLUDE_DIRS})
-    elseif(NOT USE_SWITCH)
+    else()
         set(USE_CRYPTO_OPENSSL OFF)
         include_directories(${MBEDTLS_INCLUDE_DIRS})
     endif()
