--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,21 +25,25 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "STKRelease")
 endif()
 
+option(USE_SWITCH "Build targetting switch" OFF)
+
 option(SERVER_ONLY "Create a server only (i.e. no graphics or sound)" OFF)
 option(CHECK_ASSETS "Check if assets are installed in ../stk-assets" ON)
 option(USE_SYSTEM_ANGELSCRIPT "Use system angelscript instead of built-in angelscript. If you enable this option, make sure to use a compatible version." OFF)
 option(USE_SYSTEM_ENET "Use system ENet instead of the built-in version, when available." ON)
-option(USE_IPV6 "Allow create or connect to game server with IPv6 address, system enet will not be used." ON)
+CMAKE_DEPENDENT_OPTION(USE_IPV6 "Allow create or connect to game server with IPv6 address, system enet will not be used." ON
+  "NOT USE_SWITCH" OFF)
 option(USE_SYSTEM_WIIUSE "Use system WiiUse instead of the built-in version, when available." OFF)
 option(USE_SQLITE3 "Use sqlite to manage server stats and ban list." ON)
 
-option(USE_CRYPTO_OPENSSL "Use OpenSSL instead of MbedTLS for cryptography in STK." ON)
+CMAKE_DEPENDENT_OPTION(USE_CRYPTO_OPENSSL "Use OpenSSL instead of MbedTLS for cryptography in STK." ON
+    "NOT USE_SWITCH" OFF)
 CMAKE_DEPENDENT_OPTION(BUILD_RECORDER "Build opengl recorder" ON
-    "NOT SERVER_ONLY;NOT APPLE" OFF)
+    "NOT SERVER_ONLY;NOT APPLE;NOT USE_SWITCH" OFF)
 CMAKE_DEPENDENT_OPTION(USE_SYSTEM_SQUISH "Use system Squish library instead of the built-in version, when available." ON
     "NOT SERVER_ONLY" OFF)
 CMAKE_DEPENDENT_OPTION(USE_WIIUSE "Support for wiimote input devices" ON
-    "NOT SERVER_ONLY;NOT CYGWIN" OFF)
+    "NOT SERVER_ONLY;NOT CYGWIN;NOT USE_SWITCH" OFF)
 
 if(APPLE AND NOT IOS)
     if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "arm")
@@ -185,7 +189,7 @@ endif()
 add_subdirectory("${PROJECT_SOURCE_DIR}/lib/bullet")
 include_directories(BEFORE "${PROJECT_SOURCE_DIR}/lib/bullet/src")
 
-if(WIN32 OR CMAKE_SYSTEM_NAME MATCHES "BSD" OR CMAKE_SYSTEM_NAME MATCHES "DragonFly")
+if(WIN32 OR CMAKE_SYSTEM_NAME MATCHES "BSD" OR CMAKE_SYSTEM_NAME MATCHES "DragonFly" OR USE_SWITCH)
     set(LIBRESOLV_LIBRARY)
 elseif (HAIKU)
     find_library(LIBRESOLV_LIBRARY NAMES network socket)
@@ -370,7 +374,13 @@ if (NOT SERVER_ONLY)
     SET(SHEENBIDI_LIBRARY sheenbidi)
 
     # Freetype
-    find_package(Freetype)
+    if (USE_SWITCH)
+        SET(FREETYPE_INCLUDE_DIRS /opt/devkitpro/portlibs/switch/include/freetype2)
+        SET(FREETYPE_LIBRARY freetype)
+        SET(FREETYPE_FOUND YES)
+    else()
+        find_package(Freetype)
+    endif()
     if(FREETYPE_FOUND)
         include_directories(${FREETYPE_INCLUDE_DIRS})
     else()
@@ -604,6 +614,29 @@ target_link_libraries(supertuxkart
     ${LIBRESOLV_LIBRARY}
     ${MCPP_LIBRARY}
     )
+
+if (USE_SWITCH)
+  include(cmake/FindEGL.cmake)
+  find_library(NX_LIBRARY NAMES nx libnx REQUIRED)
+  find_library(DRM_LIBRARY NAMES drm_nouveau libdrm_nouveau REQUIRED)
+  find_library(GLAPI_LIBRARY NAMES glapi libglapi REQUIRED)
+  target_link_libraries(supertuxkart
+    ${NX_LIBRARY}
+    -lz
+    -lfreetype
+    -lSDL2
+    -lpng
+    -lbz2
+    -lharfbuzz
+    -logg
+    -lvorbis
+    -lopenal
+    ${EGL_LIBRARY}
+    ${DRM_LIBRARY}
+    ${GLAPI_LIBRARY}
+    ${NX_LIBRARY}
+  )
+endif()
 
 if (USE_SQLITE3)
     target_link_libraries(supertuxkart ${SQLITE3_LIBRARY})
