--- a/data/supertuxkart.desktop
+++ b/data/supertuxkart.desktop
@@ -15,7 +15,7 @@ GenericName[eu]=Kart lasterketetako 3D jolas librea
 GenericName[fi]=Avoimen lähdekoodin kolmiulotteinen kilpa-ajopeli
 GenericName[fr]=Un jeu libre de course de karts en 3D
 GenericName[gd]=Geama rèisidh chartaichean 3D le bun-tùs fosgailte
-GenericName[he]=משחק תחרויות קארטינג תלת־ממדי בקוד פתוח
+GenericName[he]=משחק מֵרוצי מכוניות בתלת־ממד ובקוד פתוח
 GenericName[hu]=Egy 3D-s, nyílt forráskódú gokartverseny játék
 GenericName[id]=Sebuah permainan balap kart 3D sumber-terbuka
 GenericName[it]=Un gioco open-source 3D di corse su kart
@@ -48,6 +48,7 @@ Keywords[ca]=tux;joc;cursa;
 Keywords[cs]=tux;hra;závod;
 Keywords[da]=tux;spil;racerløb;
 Keywords[de]=tux;spiel;rennen;
+Keywords[el]=tux;παιχνίδι;αγώνας;
 Keywords[es]=tux;juego;carreras;
 Keywords[fi]=tux;game;race;peli;ralli;kilpa-ajo;autopeli;
 Keywords[fr]=tux;jeu;course;
