--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -6,7 +6,7 @@ on:
       - feature/gh-actions-switch
     tags:
       - '*'
-  pull_request: {]
+  pull_request: {}
   workflow_dispatch:
 
 jobs:
