--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -18,11 +18,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: "./stk-code"
-      - name: Checkout assets
+      - name: Grab assets
         run: |
           sudo apt update
-          sudo apt install subversion git gdebi-core -y
-          svn co https://svn.code.sf.net/p/supertuxkart/code/stk-assets stk-assets
+          sudo apt install gdebi-core -y
+          wget https://github.com/supertuxkart/stk-assets-mobile/releases/download/git/stk-assets-full.zip
+          unzip stk-assets-full.zip -d stk-assets
+          rm stk-assets-full.zip
       - name: Install debkitPro
         run: |
           wget https://github.com/devkitPro/pacman/releases/download/v1.0.2/devkitpro-pacman.amd64.deb
