--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -14,7 +14,7 @@ jobs:
     name: Build Switch
     runs-on: ubuntu-latest
     container:
-      image: 'devkitpro/devkitarm'
+      image: 'devkitpro/devkita64'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
