--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -40,7 +40,7 @@ jobs:
           wget -q https://github.com/supertuxkart/stk-assets-mobile/releases/download/git/stk-assets-full.zip
           unzip -q stk-assets-full.zip -d stk-assets
           rm stk-assets-full.zip
-      - name: [Hack] Copy Cmake toolchain into /opt/devkitpro
+      - name: Hack: Copy Cmake toolchain into /opt/devkitpro
         run: |
           cp -v stk-code/switch/pkgbuild-scripts/* "$DEVKITPRO/"
       - name: Run build script
