switch: gh-actions test

--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -44,13 +44,13 @@ jobs:
         run: |
           cp -v stk-code/switch/pkgbuild-scripts/* "$DEVKITPRO/"
           cd stk-code/switch
-          PROJECT_VESION=$release_tag ./make.sh
+          PROJECT_VESION="${{ env.release_tag }}" ./make.sh
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: "stk-code/cmake_build/bin/SuperTuxKart-Switch-${{ env.release_tag }}.zip"
-          tag: ${{ env.release_name }}
+          tag: ${{ env.release_tag }}
           omitBodyDuringUpdate: true
           omitNameDuringUpdate: true
           allowUpdates: true
