switch: gh-actions test

--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -53,8 +53,7 @@ jobs:
           echo "release_tag=`basename $GITHUB_REF`" >> $GITHUB_ENV
           echo "release_name=`basename $GITHUB_REF`" >> $GITHUB_ENV
       - name: Configure packaging name for non-releasing branch
-        if: ${{(github.ref != 'refs/heads/master' && github.ref != 'refs/heads/feature/gh-actions-switch' && !startsWith(github.ref, 'refs/tags/')) ||
-                 github.repository_owner != 'supertuxkart' }}
+        if: ${{github.ref != 'refs/heads/master' && github.ref != 'refs/heads/feature/gh-actions-switch' && !startsWith(github.ref, 'refs/tags/')}}
         run: |
           echo "release_tag=" >> $GITHUB_ENV
           echo "release_name=" >> $GITHUB_ENV
