--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -75,7 +75,7 @@ jobs:
         run: |
           cp -v stk-code/switch/pkgbuild-scripts/* "$DEVKITPRO/"
           cd stk-code/switch
-          PROJECT_VESION="${{ env.release_tag }}" ./make.sh
+          PROJECT_VERSION="${{ env.release_tag }}" ./make.sh
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
