--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - master
-      - feature/gh-actions-switch
     tags:
       - '*'
   pull_request: {}
@@ -43,7 +42,7 @@ jobs:
 
       # Env setup!
       - name: Configure packaging name for git master branch
-        if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/feature/gh-actions-switch' }}
+        if: ${{ github.ref == 'refs/heads/master' }}
         run: |
           echo "release_tag=git`date +%Y%m%d`" >> $GITHUB_ENV
           echo "release_name=preview" >> $GITHUB_ENV
@@ -53,16 +52,16 @@ jobs:
           echo "release_tag=`basename $GITHUB_REF`" >> $GITHUB_ENV
           echo "release_name=`basename $GITHUB_REF`" >> $GITHUB_ENV
       - name: Configure packaging name for non-releasing branch
-        if: ${{github.ref != 'refs/heads/master' && github.ref != 'refs/heads/feature/gh-actions-switch' && !startsWith(github.ref, 'refs/tags/')}}
+        if: ${{github.ref != 'refs/heads/master' && !startsWith(github.ref, 'refs/tags/')}}
         run: |
           echo "release_tag=" >> $GITHUB_ENV
           echo "release_name=" >> $GITHUB_ENV
       - name: Check for prerelease
-        if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/feature/gh-actions-switch' || contains(github.ref, 'rc') || contains(github.ref, 'beta') }}
+        if: ${{ github.ref == 'refs/heads/master' || contains(github.ref, 'rc') || contains(github.ref, 'beta') }}
         run: |
           echo "release_pre=true" >> $GITHUB_ENV
       - name: Check for non-prerelease
-        if: ${{ github.ref != 'refs/heads/master' && github.ref != 'refs/heads/feature/gh-actions-switch' && !contains(github.ref, 'rc') && !contains(github.ref, 'beta') }}
+        if: ${{ github.ref != 'refs/heads/master' && !contains(github.ref, 'rc') && !contains(github.ref, 'beta') }}
         run: |
           echo "release_pre=false" >> $GITHUB_ENV
       - name: Show packaging name
