--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -79,6 +79,8 @@ jobs:
             stk-code/cmake_build
             stk-code/lib/openal/cmake_build
             stk-code/lib/harfbuzz/cmake_build
+            !stk-code/cmake_build/install
+            !stk-code/cmake_build/bin/*.zip
           # Make sure PRs can't overwrite!
           key: ${{ github.ref }}-switch-cmake-0
 
