--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -43,9 +43,13 @@ jobs:
       - name: Restore modified date
         run: |
           sudo apt install -y git-restore-mtime
-          git restore-mtime --work-tree stk-code .
-          git restore-mtime --work-tree stk-code/lib/openal .
-          git restore-mtime --work-tree stk-code/lib/harfbuzz .
+          cd stk-code
+          git restore-mtime .
+          cd lib/openal
+          git restore-mtime .
+          cd ../../lib/harfbuzz
+          git restore-mtime .
+          cd ../../..
 
       # Env setup!
       - name: Configure packaging name for git master branch
